[gd_scene load_steps=6 format=2]

[ext_resource path="res://button.png" type="Texture" id=1]
[ext_resource path="res://door.png" type="Texture" id=2]
[ext_resource path="res://door_pos.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 16, 14 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16, 64 )

[node name="door_pos" type="Position2D" groups=[
"Persist",
]]
position = Vector2( 2688, 928 )
script = ExtResource( 3 )

[node name="open_button" type="Area2D" parent="."]
position = Vector2( 1902, -14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="open_button"]
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="open_button"]
scale = Vector2( 3.99998, 4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 1, 8, 7 )

[node name="door" type="StaticBody2D" parent="."]
position = Vector2( 16, 128 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
shape = SubResource( 17 )

[node name="top_sprite" type="Sprite" parent="door"]
position = Vector2( 0, -31 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 16 )

[node name="bottom_sprite" type="Sprite" parent="door"]
position = Vector2( 0, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 8, 8, 16 )

[node name="open_pos" type="Position2D" parent="."]
position = Vector2( 16, 64 )

[node name="closed_pos" type="Position2D" parent="."]
position = Vector2( 16, 128 )
[connection signal="body_entered" from="open_button" to="." method="_on_open_button_body_entered"]
